# ucas-soc-2025-2026-router

./: CMakeLists.txt  README.md  report.json
docs/: README.zh.md  v1.md  v2.md  v3.md  v4.md  v5.md  v6.md  提交文档.md
src/: main.cpp
src/include/: config.hpp  output.hpp  paged_grid.hpp  parser.hpp  pathfinder.hpp  types.hpp
src/include/impl/: output.cpp  parser.cpp  pathfinder.cpp
